--- a/package.json
+++ b/package.json
@@ -5,18 +5,26 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
+    "test": "set NODE_ENV=test&& jest",
+    "posttest": "rm ./src/database/database.test.sqlite"
   },
   "dependencies": {
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.33",
+    "typeorm": "^0.2.34",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.0",
     "@types/express": "^4.17.12",
+    "@types/jest": "26.0.20",
+    "@types/mocha": "^8.2.2",
+    "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.0",
+    "jest": "^27.0.4",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.2",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   }
