--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.6.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.34",
@@ -20,6 +22,7 @@
     "@types/express": "^4.17.12",
     "@types/jest": "26.0.20",
     "@types/mocha": "^8.2.2",
+    "@types/nodemailer": "^6.4.2",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
     "jest": "^27.0.4",
